--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,4 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:map="http://schemas.android.com/apk/res-auto"
+    xmlns:app="http://schemas.android.com/tools"
+    app:context=".MainActivity"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent">
 
     <fragment xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:map="http://schemas.android.com/apk/res-auto"
@@ -9,4 +15,17 @@
     map:uiScrollGestures="true"
         map:cameraTilt="30"/>
 
+
+<ImageView
+android:layout_width="40dp"
+android:layout_height="40dp"
+map:layout_constraintEnd_toEndOf="parent"
+map:layout_constraintTop_toTopOf="parent"
+android:src="@drawable/ic_baseline_my_location_24"
+android:id="@+id/gps"
+android:layout_marginTop="20dp"
+android:layout_marginEnd="5dp"
+android:scaleType="centerCrop"
+    />
+</androidx.constraintlayout.widget.ConstraintLayout>
 
