--- a/app/src/main/res/layout/activity_admin.xml
+++ b/app/src/main/res/layout/activity_admin.xml
@@ -5,16 +5,23 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:id="@+id/activity_main"
-    tools:context=".MainActivity">
+    android:id="@+id/Admin_Activty"
+    tools:context=".AdminActivity">
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Admin Screen"/>
+    </RelativeLayout>
 
-   <include layout="@layout/map_design"/>
     <com.google.android.material.navigation.NavigationView
         android:layout_width="wrap_content"
         android:layout_height="match_parent"
-        app:menu="@menu/menu_navigation"
+        app:menu="@menu/admin_menu"
         android:layout_gravity="start"
-        android:id="@+id/nv"
+        android:id="@+id/anv"
         />
 
 </androidx.drawerlayout.widget.DrawerLayout>
