--- a/app/src/main/res/layout/card_activity.xml
+++ b/app/src/main/res/layout/card_activity.xml
@@ -2,14 +2,28 @@
 <androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="100dp"
+    android:layout_height="140dp"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     app:cardCornerRadius="8dp"
+    app:cardElevation="8dp"
     android:layout_marginTop="4dp"
     android:layout_marginBottom="8dp">
 <androidx.constraintlayout.widget.ConstraintLayout
     android:layout_width="match_parent"
     android:layout_height="match_parent">
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="jas;dkfjaskl;djkd kfajd kjaskd jfklajs dklfjasd lkfj"
+        android:id="@+id/CIssue"
+        android:textSize="18dp"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/FHeadline"
+        app:layout_constraintBottom_toTopOf="@id/Reviewed"
+        android:layout_marginTop="8dp"
+        android:layout_marginBottom="8dp"
+        android:layout_marginStart="5dp"
+        />
     <TextView
         android:id="@+id/FHeadline"
         android:layout_width="wrap_content"
@@ -28,7 +42,7 @@
         android:textSize="15dp"
         android:textStyle="bold"
         app:layout_constraintStart_toEndOf="@id/tv1"
-        app:layout_constraintTop_toBottomOf="@id/FHeadline"
+        app:layout_constraintTop_toBottomOf="@id/CIssue"
         android:layout_marginTop="10dp"
         android:layout_marginStart="8dp"
         />
@@ -39,7 +53,7 @@
         android:text="Reviewed By Authority"
         android:textSize="15dp"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/FHeadline"
+        app:layout_constraintTop_toBottomOf="@id/CIssue"
         android:layout_marginTop="10dp"
         android:layout_marginStart="5dp"
         />
