--- a/app/src/main/res/layout/activity_admin.xml
+++ b/app/src/main/res/layout/activity_admin.xml
@@ -7,14 +7,10 @@
     android:layout_height="match_parent"
     android:id="@+id/Admin_Activty"
     tools:context=".AdminActivity">
-    <RelativeLayout
+    <FrameLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Admin Screen"/>
-    </RelativeLayout>
+        android:layout_height="match_parent"
+        android:id="@+id/Acontainer"/>
 
     <com.google.android.material.navigation.NavigationView
         android:layout_width="wrap_content"
