--- a/app/src/main/res/drawable/button_design.xml
+++ b/app/src/main/res/drawable/button_design.xml
@@ -5,6 +5,6 @@
     >
       <corners android:radius="19dp"
         />
-    <solid android:color="@color/blue"></solid>
+    <solid android:color="@color/purple"></solid>
 
 </shape>
