--- a/app/src/main/res/layout/admin_bottom_sheet.xml
+++ b/app/src/main/res/layout/admin_bottom_sheet.xml
@@ -43,22 +43,28 @@
         android:layout_marginEnd="5dp"
         />
     <Button
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="160dp"
+        android:layout_height="50dp"
         android:id="@+id/Show_image"
+        android:textSize="19dp"
         android:text="Show Image"
+        android:background="@drawable/button_design"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toBottomOf="@id/issueA"
         android:layout_marginTop="10dp"
         />
     <Button
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="170dp"
+        android:layout_height="50dp"
         android:id="@+id/delete"
+        android:background="@drawable/button_design"
         android:text="Delete Issue"
+        android:textSize="19dp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/Show_image"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"
         android:layout_marginTop="10dp"
+        android:layout_marginBottom="10dp"
         />
 </androidx.constraintlayout.widget.ConstraintLayout>
