--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -7,8 +7,7 @@
     </style>
     <style name="MainAcitvity.design" parent="Theme.AppCompat.Light.DarkActionBar">
         <item name="android:navigationBarColor">@color/black</item>
-        <item name="colorPrimary">@color/purple
-        </item>
+        <item name="colorPrimary">@color/purple</item>
         <item name="colorPrimaryVariant">@color/purple</item>
         <item name="colorOnPrimary">@color/white</item>
         <!-- Secondary brand color. -->
