image can seen by admin if provided else toast shown

--- a/app/src/main/res/layout/admin_bottom_sheet.xml
+++ b/app/src/main/res/layout/admin_bottom_sheet.xml
@@ -43,25 +43,39 @@
         android:layout_marginEnd="5dp"
         />
     <Button
-        android:layout_width="160dp"
+        android:layout_width="150dp"
         android:layout_height="50dp"
         android:id="@+id/Show_image"
-        android:textSize="19dp"
+        android:textSize="17dp"
         android:text="Show Image"
+        android:textColor="@color/white"
         android:background="@drawable/button_design"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toBottomOf="@id/issueA"
         android:layout_marginTop="10dp"
+        android:layout_marginEnd="10dp"
+        />
+    <ImageView
+        android:layout_width="280dp"
+        android:layout_height="280dp"
+        android:id="@+id/rimage"
+        android:src="@drawable/logo"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/Show_image"
+        app:layout_constraintBottom_toTopOf="@id/delete"
+        android:layout_marginTop="10dp"
         />
     <Button
-        android:layout_width="170dp"
+        android:layout_width="160dp"
         android:layout_height="50dp"
         android:id="@+id/delete"
         android:background="@drawable/button_design"
         android:text="Delete Issue"
-        android:textSize="19dp"
+        android:textSize="17dp"
+        android:textColor="@color/white"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/Show_image"
+        app:layout_constraintTop_toBottomOf="@id/rimage"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintBottom_toBottomOf="parent"
         android:layout_marginTop="10dp"
