--- a/app/src/main/res/layout/fragment_bottom_sheet.xml
+++ b/app/src/main/res/layout/fragment_bottom_sheet.xml
@@ -59,6 +59,17 @@
           app:layout_constraintStart_toStartOf="parent"
           app:layout_constraintTop_toBottomOf="@+id/postalcode"
           android:background="@drawable/button_design"/>
+      <TextView
+          android:layout_width="match_parent"
+          android:layout_height="wrap_content"
+          android:id="@+id/issueR"
+          app:layout_constraintStart_toStartOf="parent"
+          app:layout_constraintEnd_toEndOf="parent"
+          app:layout_constraintTop_toBottomOf="@id/postalcode"
+          android:layout_marginTop="10dp"
+          android:layout_marginStart="10dp"
+          android:layout_marginEnd="10dp"
+          />
   </androidx.constraintlayout.widget.ConstraintLayout>
 
 </FrameLayout>
