--- a/app/src/main/res/layout/card_activity.xml
+++ b/app/src/main/res/layout/card_activity.xml
@@ -2,7 +2,7 @@
 <androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="140dp"
+    android:layout_height="wrap_content"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     app:cardCornerRadius="8dp"
     app:cardElevation="8dp"
@@ -14,48 +14,87 @@
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="jas;dkfjaskl;djkd kfajd kjaskd jfklajs dklfjasd lkfj"
+        android:id="@+id/tv3"
+        android:text="Address  :"
+        android:textSize="19dp"
+        android:textColor="@color/black"
+        android:textStyle="bold"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintBottom_toTopOf="@id/FHeadline"
+        android:layout_marginStart="4dp"
+        />
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="here is the best price in india for your reference mate report joi e che na lidhe na lidhe na na na ki website"
         android:id="@+id/CIssue"
         android:textSize="18dp"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/FHeadline"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/tv4"
         app:layout_constraintBottom_toTopOf="@id/Reviewed"
         android:layout_marginTop="8dp"
-        android:layout_marginBottom="8dp"
-        android:layout_marginStart="5dp"
+
+        android:layout_marginStart="9dp"
+        android:layout_marginEnd="5dp"
+        />
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/tv4"
+        android:text="Issue  :"
+        android:textSize="19dp"
+        android:textColor="@color/black"
+        android:textStyle="bold"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/FHeadline"
+        app:layout_constraintBottom_toTopOf="@id/CIssue"
+        android:layout_marginStart="4dp"
         />
     <TextView
         android:id="@+id/FHeadline"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="LALBHAI DALPATBHAI COLLEGE OF ENGINEERING"
-        android:textSize="20dp"
+        android:textSize="18dp"
+        android:textColor="@color/black"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        android:layout_marginStart="5dp"
+        app:layout_constraintBottom_toTopOf="@id/tv4"
+        app:layout_constraintTop_toBottomOf="@id/tv3"
+        android:layout_marginStart="9dp"
+        android:layout_marginTop="5dp"
+        android:layout_marginEnd="5dp"
         />
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:id="@+id/Reviewed"
         android:text="Yes"
-        android:textSize="15dp"
-        android:textStyle="bold"
+        android:textSize="18dp"
+        android:textColor="@color/black"
         app:layout_constraintStart_toEndOf="@id/tv1"
         app:layout_constraintTop_toBottomOf="@id/CIssue"
+        app:layout_constraintBottom_toBottomOf="parent"
         android:layout_marginTop="10dp"
         android:layout_marginStart="8dp"
+        android:layout_marginBottom="7dp"
         />
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:id="@+id/tv1"
-        android:text="Reviewed By Authority"
-        android:textSize="15dp"
+        android:text="Reviewed By Authority  :"
+        android:textSize="19dp"
+        android:textColor="@color/black"
+        android:textStyle="bold"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/CIssue"
+        app:layout_constraintBottom_toBottomOf="parent"
         android:layout_marginTop="10dp"
         android:layout_marginStart="5dp"
+        android:layout_marginBottom="7dp"
         />
 </androidx.constraintlayout.widget.ConstraintLayout>
 
